# dog_finder

./: .gitignore  Dockerfile  README.md  docker-compose.yml
main_repo/: CMakeLists.txt  Dockerfile2  conanfile.txt  main.py  requirements.txt
main_repo/src/: CMakeLists.txt  conanfile.txt  just_library.cpp
main_repo/src/pybind11/: Makefile  cmake_install.cmake
